<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
	    android:background="#6A3384">

   
	   <LinearLayout 
	       android:layout_height="fill_parent"
	       android:layout_width="fill_parent"
	       android:orientation="vertical">
	          
	        <Button
		        android:id="@+id/author"	
		        android:layout_width="250dp"
		        android:layout_height="70dp"      
		        android:background="@drawable/home_button_state"
		        android:onClick="onClickAuthor"
		        android:text="@string/author"
		        android:layout_marginTop="60dp"
		        android:textColor="@drawable/home_text_state" 
	       		android:layout_gravity="center"
		        android:layout_weight="1"
		        android:textSize="25sp"/>
	       
		    <Button
		        android:id="@+id/book"
		        android:layout_width="250dp"
		        android:layout_height="70dp"	
		        android:layout_marginTop="30dp"       
		        android:background="@drawable/home_button_state"
		        android:onClick="onClickBook"
		        android:text="@string/book"
		        android:textColor="@drawable/home_text_state" 
	       		android:layout_gravity="center"
		        android:layout_weight="1" 
		        android:textSize="25sp"/>
		
		    <Button
		        android:id="@+id/iquote"
		        android:layout_width="250dp"
		        android:layout_height="70dp"
		        android:layout_marginTop="30dp"
				android:text="@string/quote" 
		        android:onClick="onClickQuote"
		        android:background="@drawable/home_button_state" 
		        android:textColor="@drawable/home_text_state" 
	       		android:layout_gravity="center"
		        android:layout_weight="1"
		        android:textSize="25sp"/>

		
		    <Button
		        android:id="@+id/random"
		        android:layout_width="250dp"
		        android:layout_height="70dp"
		        android:layout_marginTop="30dp"
		        android:layout_marginBottom="20dp"
		        android:background="@drawable/home_button_state"
		        android:onClick="onClickRandom"
		        android:text="@string/random"
		        android:textColor="@drawable/home_text_state"  
	       		android:layout_gravity="center"
		        android:layout_weight="1"
		        android:textSize="25sp"/>
	
	    </LinearLayout>

</ScrollView>